--- a/package.json
+++ b/package.json
@@ -120,12 +120,14 @@
     "zod-validation-error": "^3.4.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.52.0",
     "@replit/vite-plugin-cartographer": "^0.0.11",
     "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
     "@tailwindcss/typography": "^0.5.15",
     "@types/connect-pg-simple": "^7.0.3",
     "@types/express": "4.17.21",
     "@types/express-session": "^1.18.0",
+    "@types/jest": "^29.5.14",
     "@types/node": "20.16.11",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
@@ -136,8 +138,12 @@
     "autoprefixer": "^10.4.20",
     "drizzle-kit": "^0.31.1",
     "esbuild": "^0.25.0",
+    "jest": "^29.7.0",
+    "playwright": "^1.52.0",
     "postcss": "^8.4.47",
+    "supertest": "^7.1.0",
     "tailwindcss": "^3.4.14",
+    "ts-jest": "^29.3.2",
     "tsx": "^4.19.4",
     "typescript": "5.6.3",
     "vite": "^5.4.19"
