--- a/package.json
+++ b/package.json
@@ -126,6 +126,7 @@
     "@replit/vite-plugin-cartographer": "^0.0.11",
     "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
     "@tailwindcss/typography": "^0.5.15",
+    "@types/body-parser": "^1.19.5",
     "@types/connect-pg-simple": "^7.0.3",
     "@types/express": "4.17.21",
     "@types/express-session": "^1.18.0",
@@ -147,6 +148,7 @@
     "supertest": "^7.1.0",
     "tailwindcss": "^3.4.14",
     "ts-jest": "^29.3.2",
+    "ts-node": "^10.9.2",
     "tsx": "^4.19.4",
     "typescript": "5.6.3",
     "vite": "^5.4.19"
