--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "dev": "tsx server/index.ts",
+    "dev": "concurrently \"tsx server/index.ts\" \"vite\"",
+    "dev:client": "vite",
+    "dev:server": "tsx server/index.ts",
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
+    "build:client": "vite build",
     "start": "NODE_ENV=production node dist/index.js",
+    "vercel-build": "npm run build:client",
     "check": "tsc",
     "db:push": "drizzle-kit push",
     "test": "jest",
