fix: resolve framer-motion build issues with fallback components

--- a/vercel.json
+++ b/vercel.json
@@ -12,5 +12,7 @@
   },
   "env": {
     "NODE_ENV": "production"
-  }
+  },
+  "installCommand": "npm install --legacy-peer-deps",
+  "framework": null
 }
