--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,24 @@
-# Configuração do servidor
-NODE_ENV=development
-PORT=5100
-HOST=0.0.0.0
+# Database Configuration
+DATABASE_URL=postgresql://user:password@host/database?sslmode=require
 
-# Configuração do banco de dados
-DATABASE_URL=postgresql://postgres:postgres@localhost:5432/maria_db
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
-POSTGRES_DB=maria_db
+# Google Gemini API (for OCR and AI features)
+GOOGLE_GEMINI_API_KEY=your_gemini_api_key
 
-# Chaves de API para serviços externos
-GOOGLE_GEMINI_API_KEY=your_gemini_api_key_here
-OPENROUTER_API_KEY=your_openrouter_api_key_here
-HF_TOKEN=your_huggingface_token_here
+# Session Secret
+SESSION_SECRET=your_session_secret_here
 
-# Configuração para Docker
-DOCKER_USERNAME=your_docker_username
+# Environment
+NODE_ENV=production
 
-# Configuração para i18n
-FAIL_ON_MISSING_TRANSLATION=false
+# Server Configuration
+PORT=5000
+
+# Optional: Email Service (Nodemailer)
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_USER=your_email@gmail.com
+EMAIL_PASS=your_app_password
+
+# Optional: Redis (for session storage)
+REDIS_URL=redis://localhost:6379
+EOF < /dev/null
