--- a/package.json
+++ b/package.json
@@ -13,8 +13,24 @@
     "vercel-build": "npm run build:client",
     "check": "tsc",
     "db:push": "drizzle-kit push",
-    "test": "jest",
-    "test:coverage": "jest --coverage",
+    "db:migrate": "tsx server/db/migrations/run-migration.ts",
+    "db:seed": "tsx server/db/seed.ts",
+    "db:setup": "npm run db:migrate && npm run db:seed",
+    "verify": "node scripts/verify-environment.mjs",
+    "db:migrate:force": "tsx server/db/migrations/run-migration.ts --force",
+    "db:analyze": "tsx server/db/migrations/run-migration.ts --analyze-only",
+    "db:validate": "tsx server/db/migrations/validate-migration.ts",
+    "test": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:jest": "jest",
+    "test:ocr": "vitest tests/ocr-*.spec.ts",
+    "test:ocr-integration": "vitest tests/ocr-integration.spec.ts",
+    "test:ocr-providers": "vitest tests/ocr-providers.spec.ts",
+    "test:ocr-api": "vitest tests/ocr-api-endpoints.spec.ts",
+    "test:ocr-validation": "vitest tests/ocr-validation.spec.ts",
+    "test:ocr-full": "node scripts/run-ocr-tests.mjs",
+    "test:ocr-quick": "node scripts/validate-ocr-quick.mjs",
+    "test:ocr-report": "node scripts/run-ocr-tests.mjs --report",
     "e2e": "playwright test",
     "lint": "eslint . --ext .ts,.tsx",
     "railway:deploy": "node scripts/railway-integration.js deploy",
@@ -42,6 +58,7 @@
     "@capacitor/status-bar": "^7.0.0",
     "@fontsource/open-sans": "^5.2.5",
     "@fontsource/playfair-display": "^5.2.5",
+    "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^3.9.1",
     "@jridgewell/trace-mapping": "^0.3.25",
     "@mistralai/mistralai": "^1.5.1",
@@ -119,7 +136,7 @@
     "pdf-lib": "^1.17.1",
     "pdf-parse": "^1.1.1",
     "pdfjs-dist": "^5.2.133",
-    "pg": "^8.14.0",
+    "pg": "^8.16.3",
     "pgvector": "^0.2.0",
     "pino": "^9.6.0",
     "pino-http": "^10.4.0",
@@ -138,6 +155,7 @@
     "uuid": "^11.1.0",
     "vaul": "^1.1.0",
     "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^4.7.1",
     "wouter": "^3.3.5",
     "ws": "^8.18.0",
     "zod": "^3.23.8",
@@ -153,15 +171,15 @@
     "@types/express": "4.17.21",
     "@types/express-session": "^1.18.0",
     "@types/jest": "^29.5.14",
-    "@types/node": "20.16.11",
+    "@types/node": "^20.19.9",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
-    "@types/react": "^18.3.11",
-    "@types/react-dom": "^18.3.1",
+    "@types/react": "^18.3.23",
+    "@types/react-dom": "^18.3.7",
     "@types/supertest": "^6.0.3",
     "@types/ws": "^8.5.13",
     "@vercel/node": "^5.3.7",
-    "@vitejs/plugin-react": "^4.3.2",
+    "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.20",
     "concurrently": "^9.2.0",
     "drizzle-kit": "^0.18.1",
