--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
   "outputDirectory": "dist",
   "functions": {
     "api/index.js": {
-      "runtime": "@vercel/node@3.0.7",
+      "runtime": "nodejs18.x",
       "maxDuration": 30
     }
   },
