--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "dev:server": "tsx server/index.ts",
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "build:client": "vite build",
+    "build:server": "esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outfile=api/index.js",
+    "build:vercel": "npm run build:client && npm run build:server",
     "start": "NODE_ENV=production node dist/index.js",
-    "vercel-build": "vite build",
+    "vercel-build": "npm run build:vercel",
     "vercel-dev": "vite dev --port $PORT",
     "check": "tsc",
     "db:push": "drizzle-kit push",
