--- a/vercel.json
+++ b/vercel.json
@@ -1,27 +1,20 @@
 {
   "version": 2,
-  "buildCommand": "npm run vercel-build",
-  "outputDirectory": "dist",
   "functions": {
     "api/index.js": {
       "runtime": "nodejs18.x",
       "maxDuration": 30
     }
   },
-  "env": {
-    "NODE_ENV": "production"
-  },
-  "installCommand": "npm install",
-  "framework": null,
   "routes": [
     {
-      "src": "/api/(.*)",
-      "dest": "/api/index.js"
+      "src": "/assets/(.*)",
+      "headers": { "cache-control": "public, max-age=31536000, immutable" },
+      "dest": "/dist/assets/$1"
     },
     {
       "src": "/(.*)",
-      "dest": "/dist/$1"
+      "dest": "/api/index.js"
     }
-  ],
-  "regions": ["fra1"]
+  ]
 }
