feat(vercel): add new API endpoints configuration
Add configuration for multiple new API endpoints in vercel.json including activities, enums, health, owners, properties, reservations, statistics and status. Also comment out potentially sensitive scripts in .vercelignore.

--- a/.vercelignore
+++ b/.vercelignore
@@ -52,8 +52,8 @@ temp
 .vercel
 
 # Scripts that might have credentials
-fix-motion.cjs
-scripts/
+# fix-motion.cjs
+# scripts/
 
 # Development files
 *.bak
