Fix: Copy public directory to correct location for server

--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "build:server": "esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outfile=api/index.js",
     "build:vercel": "npm run build:client && npm run build:server",
     "start": "NODE_ENV=production node dist/server/index.js",
+    "start:debug": "echo 'DEBUG: Checking file structure...' && find dist -name '*.js' | head -10 && echo 'DEBUG: Trying to start server...' && NODE_ENV=production node dist/server/index.js",
+    "start:fallback1": "NODE_ENV=production node ./dist/server/index.js",
+    "start:fallback2": "NODE_ENV=production node dist/index.js",
+    "start:robust": "node start-server.js",
     "vercel-build": "npm run build:vercel",
     "vercel-dev": "vite dev --port $PORT",
     "check": "tsc",
