--- a/.render.yaml
+++ b/.render.yaml
@@ -8,7 +8,7 @@ services:
     autoDeploy: true
     rootDir: .
     buildCommand: npm install --legacy-peer-deps && npm run build:render
-    startCommand: npm run start
+    startCommand: npm run start:robust
     healthCheckPath: /api/health
     envVars:
       - key: NODE_ENV
