--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev:client": "vite",
     "dev:server": "tsx server/index.ts",
     "build": "npm run build:client && npm run build:server",
-    "build:render": "vite build && mkdir -p dist/server && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outfile=dist/server/index.js",
+    "build:render": "vite build && mkdir -p dist/server && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outfile=dist/server/index.js && ls dist/server/index.js || (echo 'Server build failed!' && exit 1)",
     "build:client": "vite build",
     "build:server": "esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outfile=api/index.js",
     "build:vercel": "npm run build:client && npm run build:server",
